<resources>

    <string name="test">Test</string>
    <string name="testday">Monday</string>
    <string name="delete">delete</string>
    <string name="time">10am - 12pm</string>
    <string name="location">PHELPS</string>
    <string name="loadItall">Load Courses</string>
    <string name="addtoclassslist">Add to Class list</string>


    <string name="button_delete_row_description">Delete</string>
    <string-array name="categories">
        <item >HOME</item>
        <item >WORK</item>
        <item >MOBILE</item>
        <item >OTHER</item>
    </string-array>

    <string name="app_name">GauchoCalendar-Android</string>
    <string name="app_display_name">Gaucho Calendar</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="GC">Gaucho Calendar</string>
    <string name="title_activity_open_screen">OpenScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_student_prof_login">StudentProfLogin</string>

    // These Strings are for the StudentLogin.java and activity_student_login.xml
    <string name="SignUpButtonText">Signup </string>
    <string name="UserNameText">USERNAME</string>
    <string name="PasswordText">PASSWORD</string>
    <string name="GotAccount">already have an account?</string>
    <string name="LoginButtonText">Login</string>
    <string name="FBlogin">Login with Facebook</string>
    <string name="facebook_app_id">286464531696191</string>


    // These String are for the InputEvents.java and activity_input_events.xml
    <string name="FilloutEvent">Search Courses</string>
    <string name="CustomEvent">Custom Event</string>
    <string name="Depart">Subject Area:</string>
    <string name="Quarter">Quarter:</string>
    <string name="CourseLvl">Course Level:</string>
    <string name="search">Search</string>
    <string name="gocalendar">See Calendar</string>
    <string name="Title">Event Name</string>
    <string name="loc">Location</string>
    <string name="dateTime">Day of Week</string>
    <string name="addCustom">Add Event</string>
    <string name="starttime">Start Time</string>
    <string name="endtime">End Time</string>

    <string-array name="departments">
        <item>ANTH</item>
        <item>ART</item>
        <item>ART CS</item>
        <item>ARTHI</item>
        <item>ARTST</item>
        <item>AS AM</item>
        <item>ASTRO</item>
        <item>BIOL</item>
        <item>BIOL CS</item>
        <item>BMSE</item>
        <item>BL ST</item>
        <item>CH E</item>
        <item>CHEM CS</item>
        <item>CHEM</item>
        <item>CH ST</item>
        <item>CHIN</item>
        <item>CLASS</item>
        <item>COMM</item>
        <item>C LIT</item>
        <item>CMPSC</item>
        <item>CMPSCCS</item>
        <item>CMPTG</item>
        <item>CMPTGCS</item>
        <item>CNCSP</item>
        <item>DANCE</item>
        <item>DYNS</item>
        <item>EARTH</item>
        <item>EACS</item>
        <item>EEMB</item>
        <item>ECON</item>
        <item>ED</item>
        <item>ECE</item>
        <item>ENGR</item>
        <item>ENGL</item>
        <item>ESM</item>
        <item>ENV S</item>
        <item>ESS</item>
        <item>ES</item>
        <item>FEMST</item>
        <item>FAMST</item>
        <item>FLMST</item>
        <item>FR</item>
        <item>GEN S</item>
        <item>GEN SCS</item>
        <item>GEOG</item>
        <item>GER</item>
        <item>GPS</item>
        <item>GLOBL</item>
        <item>GREEK</item>
        <item>HEB</item>
        <item>HIST</item>
        <item>INT</item>
        <item>INT CS</item>
        <item>ITAL</item>
        <item>JAPAN</item>
        <item>KOR</item>
        <item>LATIN</item>
        <item>LAIS</item>
        <item>LING</item>
        <item>LIT</item>
        <item>LIT CS</item>
        <item>MARSC</item>
        <item>MATRL</item>
        <item>MATH</item>
        <item>MATH CS</item>
        <item>ME</item>
        <item>MAT</item>
        <item>ME ST</item>
        <item>MES</item>
        <item>MS</item>
        <item>MCDB</item>
        <item>MUS</item>
        <item>MUS CS</item>
        <item>MUS A</item>
        <item>PHIL</item>
        <item>PHYS</item>
        <item>PHYS CS</item>
        <item>POL S</item>
        <item>PORT</item>
        <item>PSY</item>
        <item>RG ST</item>
        <item>RENST</item>
        <item>SLAV</item>
        <item>SOC</item>
        <item>SPAN</item>
        <item>SHS</item>
        <item>STAT</item>
        <item>TMP</item>
        <item>THTR</item>
        <item>WRIT</item>
        <item>WL</item>
        <item>WL CS</item>
    </string-array>

    <string-array name="Quarter">
        <item> Summer 2016</item>
        <item> Fall 2016 </item>
    </string-array>

    <string-array name="Weekday">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string-array name="Hours">
        <item> 1 </item>
        <item> 2 </item>
        <item> 3 </item>
        <item> 4 </item>
        <item> 5 </item>
        <item> 6 </item>
        <item> 7 </item>
        <item> 8 </item>
        <item> 9 </item>
        <item> 10 </item>
        <item> 11 </item>
        <item> 12 </item>
    </string-array>

    <string-array name="Min">
        <item> 00 </item>
        <item> 01 </item>
        <item> 02 </item>
        <item> 03 </item>
        <item> 04 </item>
        <item> 05 </item>
        <item> 06 </item>
        <item> 07 </item>
        <item> 08 </item>
        <item> 09 </item>
        <item> 10 </item>
        <item> 11 </item>
        <item> 12 </item>
        <item> 13 </item>
        <item> 14 </item>
        <item> 15 </item>
        <item> 16 </item>
        <item> 17 </item>
        <item> 18 </item>
        <item> 19 </item>
        <item> 20 </item>
        <item> 21 </item>
        <item> 22 </item>
        <item> 23 </item>
        <item> 24 </item>
        <item> 25 </item>
        <item> 26 </item>
        <item> 27 </item>
        <item> 28 </item>
        <item> 29 </item>
        <item> 30 </item>
        <item> 31 </item>
        <item> 32 </item>
        <item> 33 </item>
        <item> 34 </item>
        <item> 35 </item>
        <item> 36 </item>
        <item> 37 </item>
        <item> 38 </item>
        <item> 39 </item>
        <item> 40 </item>
        <item> 41 </item>
        <item> 42 </item>
        <item> 43 </item>
        <item> 44 </item>
        <item> 45 </item>
        <item> 46 </item>
        <item> 47 </item>
        <item> 48 </item>
        <item> 49 </item>
        <item> 50 </item>
        <item> 51 </item>
        <item> 52 </item>
        <item> 53 </item>
        <item> 54 </item>
        <item> 55 </item>
        <item> 56 </item>
        <item> 57 </item>
        <item> 58 </item>
        <item> 59 </item>
        <item> 60 </item>
    </string-array>

    <string-array name="AmPm">
        <item> AM </item>
        <item> PM </item>
    </string-array>

    <string name="colon"> : </string>


    // These Strings are for the Information.java and actvity_information.xml
    <string name="startcal">get started</string>
    <string name="info">Information</string>


    // These String are for the CalendarView.java and CalendarView.xml
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>

    <string name="time12am">12 am</string>
    <string name="time1am">12 am</string>
    <string name="time2am">12 am</string>
    <string name="time3am">12 am</string>
    <string name="time4am">12 am</string>
    <string name="time5am">12 am</string>
    <string name="time6am">12 am</string>
    <string name="time7am">12 am</string>
    <string name="time8am">12 am</string>
    <string name="time9am">12 am</string>
    <string name="time10am">12 am</string>
    <string name="time11am">12 am</string>
    <string name="time12pm">12 am</string>
    <string name="time1pm">12 am</string>
    <string name="time2pm">12 am</string>
    <string name="time3pm">12 am</string>
    <string name="time4pm">12 am</string>
    <string name="time5pm">12 am</string>
    <string name="time6pm">12 am</string>
    <string name="time7pm">12 am</string>
    <string name="time8pm">12 am</string>
    <string name="time9pm">12 am</string>
    <string name="time10pm">12 am</string>
    <string name="time11pm">12 am</string>

    <string name="updating">Updating</string>
    <string name="calendartop"> Welcome! </string>
    <string name="hello_blank_fragment">Hello</string>

</resources>
