<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ucsbstudent.phillip.gauchocalendar_android.StudentLogin">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/SignUpButtonText"
        android:id="@+id/LoginButton"
        android:layout_below="@+id/TextFieldPASSWORD"
        android:layout_alignParentStart="true"
        android:onClick="buttonSignUp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/UserNameText"
        android:id="@+id/saysUsername"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TextFieldUSERNAME"
        android:hint="Enter Umail Username"
        android:layout_below="@+id/saysUsername"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/PasswordText"
        android:id="@+id/saysPassword"
        android:layout_below="@+id/TextFieldUSERNAME"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="Enter your Password"
        android:id="@+id/TextFieldPASSWORD"
        android:layout_below="@+id/saysPassword"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LoginButtonText"
        android:id="@+id/loginbtn"
        android:layout_below="@+id/accountques"
        android:layout_centerHorizontal="true"
        android:onClick="buttonLogin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/GotAccount"
        android:id="@+id/accountques"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/FBbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/FacebookBlue"
        android:text="@string/FBlogin"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
