<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="5dp">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameofEvent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingStart="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:textColor="@color/black">
        </TextView>

        <TextView
            android:id="@+id/nameofLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="3dp"
            android:paddingStart="10dp"
            android:text="@string/fri"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/DateandTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingTop="3dp"
            android:paddingBottom="2dp"
            android:text="@string/mon"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/DateandTime2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingTop="3dp"
            android:paddingBottom="2dp"
            android:text="@string/sun"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/content_remove"
        android:visibility="visible"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/button_delete_row_description" />


</RelativeLayout>
</android.support.v7.widget.CardView>