<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ucsbstudent.phillip.gauchocalendar_android.InputEvents">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/FilloutEvent"
        android:id="@+id/PromptEvent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinnersubject"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/subject"
        android:layout_alignParentStart="true"
        android:background="@android:drawable/btn_dropdown"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Depart"
        android:id="@+id/subject"
        android:layout_below="@+id/PromptEvent"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Quarter"
        android:id="@+id/QuarterTxt"
        android:layout_below="@+id/spinnersubject"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerQuarter"
        android:spinnerMode="dropdown"
        android:background="@android:drawable/btn_dropdown"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/CourseLvl"
        android:id="@+id/Quarter"
        android:layout_below="@+id/spinnerQuarter"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinnercourselvl"
        android:background="@android:drawable/btn_dropdown"
        android:layout_below="@+id/Quarter"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:id="@+id/buttonsearch"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gocalendar"
        android:id="@+id/gocalendar"
        android:layout_alignTop="@+id/buttonsearch"
        android:layout_alignParentEnd="true"
        android:onClick="goCalendar"
        />


</RelativeLayout>
